# safeNotatki

./: Session.vim
api/: Cargo.toml
api/src/: appmod.rs  appstate.rs  broadcast.rs  endpoints.rs  main.rs  sqlv2.sql  structs.rs  utils.rs  wrappers.rs
api/src/endpoints/: admining_users.rs  general.rs
api/src/wrappers/: eventor.rs  messanger.rs  user.rs
frontend/: package-lock.json
