[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.*", features = ["serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
sha256 = "1.6.0"
dotenv = "0.15.0"
nanorand = "0.8.0"
#sse
actix-web-lab = "0.18.5"
parking_lot = "0.12.1"
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
dashmap = "6.1.0"
